[package]
name = "mycorrh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Mycorrh is a fast concurrent messaging system for Rust."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
async-trait = "0.1.68"
